--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,8 @@
     "@react-native-community/async-storage": "^1.5.1",
     "@react-native-community/cli": "^2.4.1",
     "@react-native-community/slider": "^2.0.0-rc.1",
+    "@turf/distance": "^6.0.1",
+    "@turf/helpers": "^6.1.4",
     "@turf/turf": "^5.1.6",
     "@types/d3": "^5.7.2",
     "@types/mapbox": "^1.6.39",
