--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,8 @@
   "author": "Jonathan Dubman",
   "license": "ISC",
   "dependencies": {
+    "@turf/distance": "^6.0.1",
+    "@turf/helpers": "^6.1.4",
     "@turf/turf": "^5.1.6",
     "@types/body-parser": "^1.17.0",
     "@types/bunyan": "^1.8.6",
