--- a/app/ios/Podfile
+++ b/app/ios/Podfile
@@ -52,10 +52,22 @@ target 'Pathify' do
     # Pods for testing
   end
 
-  # workaround (hopefully temporary) per https://github.com/facebook/react-native/issues/24192
   post_install do |installer|
     installer.pods_project.targets.each do |target|
+      # workaround per https://github.com/facebook/react-native/issues/24192
       if target.name == "React"
+        target.remove_from_project
+      end
+
+      # workaround per https://github.com/facebook/react-native/issues/20492
+      # The following is needed to ensure the "archive" step works in XCode.
+      # It removes React & Yoga from the Pods project, as it is already included in the main project.
+      # Without this, you'd see errors when you archive like:
+      # "Multiple commands produce ... libReact.a"
+      # "Multiple commands produce ... libyoga.a"
+
+      targets_to_ignore = %w(React yoga)
+      if targets_to_ignore.include? target.name
         target.remove_from_project
       end
     end
