--- a/app/package.json
+++ b/app/package.json
@@ -39,6 +39,7 @@
     "react-native-svg": "^9.6.4",
     "react-native-vector-icons": "^6.4.2",
     "react-redux": "^7.0.3",
+    "realm": "^2.29.2",
     "redux": "^4.0.4",
     "redux-saga": "^1.0.2",
     "util": "^0.12.0",
