--- a/package.json
+++ b/package.json
@@ -7,5 +7,6 @@
   "main": "index.js",
   "repository": "git@github.com:jondubman/pathify.git",
   "author": "jondubman <jon@dubman.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {}
 }
