--- a/app/package.json
+++ b/app/package.json
@@ -10,23 +10,23 @@
   "dependencies": {
     "@react-native-community/cli": "^2.9.0",
     "@react-native-community/slider": "^2.0.0",
-    "@react-native-mapbox-gl/maps": "^7.0.4",
+    "@react-native-mapbox-gl/maps": "^7.0.6",
     "@turf/distance": "^6.0.1",
     "@turf/helpers": "^6.1.4",
     "@turf/turf": "^5.1.6",
     "@types/d3": "^5.7.2",
     "@types/mapbox": "^1.6.39",
-    "@types/mapbox-gl": "^0.54.3",
+    "@types/mapbox-gl": "^0.54.4",
     "@types/radium": "^0.24.2",
     "@types/react-native-vector-icons": "^6.4.0",
-    "@types/react-redux": "^7.1.2",
+    "@types/react-redux": "^7.1.4",
     "@types/uuid": "^3.4.4",
-    "@types/victory": "^31.0.22",
+    "@types/victory": "^33.0.0",
     "d3": "^5.12.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
-    "react-devtools": "^4.1.0",
+    "react-devtools": "^4.1.2",
     "react-dom": "^16.9.0",
     "react-native": "0.60.5",
     "react-native-background-fetch": "^2.7.0",
@@ -35,7 +35,7 @@
     "react-native-restart": "^0.0.13",
     "react-native-safe-area-view-with-get-inset": "^0.10.0",
     "react-native-status-bar-height": "^2.4.0",
-    "react-native-svg": "9.9.4",
+    "react-native-svg": "^9.9.9",
     "react-native-vector-icons": "6.4.2",
     "react-redux": "^7.1.1",
     "realm": "^3.1.0",
@@ -47,8 +47,8 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.18",
-    "@types/react": "^16.9.2",
-    "@types/react-native": "^0.60.15",
+    "@types/react": "^16.9.3",
+    "@types/react-native": "^0.60.17",
     "@types/react-test-renderer": "^16.9.0",
     "babel-jest": "24.9.0",
     "jest": "24.9.0",
