--- a/app/android/app/build.gradle
+++ b/app/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-restart')
     implementation project(':realm')
     implementation project(':@react-native-community_slider')
     implementation project(':@mapbox_react-native-mapbox-gl')
