--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "devtools": "react-devtools",
+    "ios": "react-native run-ios",
     "start": "pushd .; cd ../shared; yarn share; popd; node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
@@ -28,7 +29,7 @@
     "react": "16.9.0",
     "react-devtools": "^4.1.2",
     "react-dom": "^16.9.0",
-    "react-native": "0.60.5",
+    "react-native": "0.61.3",
     "react-native-background-fetch": "^2.7.0",
     "react-native-background-geolocation": "^3.3.2",
     "react-native-device-info": "^5.2.1",
@@ -47,13 +48,16 @@
     "victory-native": "^33.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.5.0",
+    "@babel/runtime": "^7.5.0",
+    "@react-native-community/eslint-config": "^0.0.3",
     "@types/jest": "^24.0.18",
     "@types/react": "^16.9.11",
     "@types/react-native": "^0.60.17",
     "@types/react-test-renderer": "^16.9.0",
     "babel-jest": "24.9.0",
     "jest": "24.9.0",
-    "metro-react-native-babel-preset": "0.56.3",
+    "metro-react-native-babel-preset": "0.57.0",
     "react-native-typescript-transformer": "^1.2.13",
     "react-test-renderer": "^16.9.0",
     "ts-jest": "^24.1.0",
