--- a/app/package.json
+++ b/app/package.json
@@ -37,10 +37,10 @@
     "react-native-restart": "^0.0.13",
     "react-native-safe-area-view-with-get-inset": "^0.10.0",
     "react-native-status-bar-height": "^2.4.0",
-    "react-native-svg": "^9.13.3",
+    "react-native-svg": "9.13.3",
     "react-native-vector-icons": "6.4.2",
     "react-redux": "^7.1.3",
-    "realm": "^3.2.0",
+    "realm": "3.3.0",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.3",
     "util": "^0.12.0",
