--- a/app/package.json
+++ b/app/package.json
@@ -43,6 +43,7 @@
     "realm": "3.3.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
+    "reselect": "^4.0.0",
     "util": "^0.12.0",
     "uuid": "^3.3.3",
     "victory-native": "^34.0.0"
