--- a/app/ios/Podfile
+++ b/app/ios/Podfile
@@ -3,7 +3,7 @@ platform :ios, '12.0'
 
 target 'Pathify' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
-  # use_frameworks!
+  use_frameworks!
 
   # Pods for Pathify
   pod 'FBLazyVector', :path => "../node_modules/react-native/Libraries/FBLazyVector"
