--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/cli": "3.0.0",
+    "@react-native-community/cli": "3.0.4",
     "@react-native-community/slider": "^2.0.8",
     "@react-native-mapbox-gl/maps": "^7.0.6",
     "@turf/distance": "^6.0.1",
@@ -17,52 +17,53 @@
     "@turf/turf": "^5.1.6",
     "@types/d3": "^5.7.2",
     "@types/mapbox": "^1.6.39",
-    "@types/mapbox-gl": "^1.6.1",
+    "@types/mapbox-gl": "^1.6.3",
     "@types/radium": "^0.24.2",
     "@types/react-native-vector-icons": "^6.4.5",
-    "@types/react-redux": "^7.1.4",
+    "@types/react-redux": "^7.1.6",
     "@types/uuid": "^3.4.4",
-    "@types/victory": "^33.1.1",
+    "@types/victory": "^33.1.3",
     "d3": "^5.15.0",
+    "eslint": "^6.8.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-devtools": "^4.1.2",
     "react-dom": "^16.9.0",
-    "react-native": "0.61.4",
+    "react-native": "0.61.5",
     "react-native-background-fetch": "^2.7.0",
     "react-native-background-geolocation": "^3.4.2",
-    "react-native-device-info": "^5.4.0",
+    "react-native-device-info": "^5.4.1",
     "react-native-dotenv": "^0.2.0",
     "react-native-restart": "^0.0.13",
     "react-native-safe-area-view-with-get-inset": "^0.10.0",
     "react-native-status-bar-height": "^2.4.0",
-    "react-native-svg": "9.13.6",
-    "react-native-vector-icons": "6.4.2",
+    "react-native-svg": "11.0.1",
+    "react-native-vector-icons": "6.6.0",
     "react-redux": "^7.1.3",
-    "realm": "3.3.0",
+    "realm": "^3.6.3",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
     "util": "^0.12.0",
-    "uuid": "^3.3.3",
+    "uuid": "^3.4.0",
     "victory-native": "^34.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.5",
-    "@babel/runtime": "^7.7.6",
-    "@react-native-community/eslint-config": "^0.0.5",
-    "@types/jest": "^24.0.25",
+    "@babel/core": "^7.8.3",
+    "@babel/runtime": "^7.8.3",
+    "@react-native-community/eslint-config": "^0.0.6",
+    "@types/jest": "^24.9.0",
     "@types/react": "^16.9.17",
-    "@types/react-native": "^0.60.27",
+    "@types/react-native": "^0.61.0",
     "@types/react-test-renderer": "^16.9.0",
     "babel-jest": "24.9.0",
     "jest": "24.9.0",
-    "metro-react-native-babel-preset": "0.57.0",
+    "metro-react-native-babel-preset": "0.58.0",
     "react-native-typescript-transformer": "^1.2.13",
-    "react-test-renderer": "^16.9.0",
-    "ts-jest": "^24.2.0",
-    "typescript": "^3.7.4"
+    "react-test-renderer": "^16.12.0",
+    "ts-jest": "^24.3.0",
+    "typescript": "^3.7.5"
   },
   "jest": {
     "preset": "react-native",
