--- a/app/package.json
+++ b/app/package.json
@@ -37,6 +37,7 @@
     "react-native-background-geolocation": "^3.4.2",
     "react-native-device-info": "^5.4.1",
     "react-native-dotenv": "^0.2.0",
+    "react-native-haptic": "^1.0.1",
     "react-native-restart": "^0.0.13",
     "react-native-safe-area-view-with-get-inset": "^0.10.0",
     "react-native-status-bar-height": "^2.4.0",
