--- a/shared/package.json
+++ b/shared/package.json
@@ -9,7 +9,7 @@
     "util": "^0.12.1"
   },
   "scripts": {
-    "share": "ls *.ts*; rm -rf ../web/src/shared; mkdir ../web/src/shared; cp -R *.ts* ../web/src/shared; rm -rf ../server/src/shared; mkdir ../server/src/shared; cp -R *.ts* ../server/src/shared; rm -rf ../app/shared; mkdir ../app/shared; cp -R *.ts* ../app/shared; cp package.json ../app/shared",
+    "share": "ls *.ts*; rm -rf ../server/src/shared; mkdir ../server/src/shared; cp -R *.ts* ../server/src/shared; rm -rf ../app/shared; mkdir ../app/shared; cp -R *.ts* ../app/shared; cp package.json ../app/shared",
     "watch": "watchman watch .; watchman -j <watchmanTrigger.json; watchman watch-list",
     "unwatch": "watchman watch-del .; watchman watch-list"
   },
