--- a/app/package.json
+++ b/app/package.json
@@ -40,6 +40,7 @@
     "react-native-haptic": "^1.0.1",
     "react-native-restart": "^0.0.13",
     "react-native-safe-area-view-with-get-inset": "^0.10.0",
+    "react-native-snap-carousel": "^3.8.4",
     "react-native-status-bar-height": "^2.4.0",
     "react-native-svg": "11.0.1",
     "react-native-vector-icons": "6.6.0",
