--- a/app/package.json
+++ b/app/package.json
@@ -40,9 +40,9 @@
     "react-native-haptic": "^1.0.1",
     "react-native-restart": "^0.0.13",
     "react-native-safe-area-view-with-get-inset": "^0.10.0",
-    "react-native-snap-carousel": "^3.8.4",
     "react-native-status-bar-height": "^2.4.0",
     "react-native-svg": "11.0.1",
+    "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "6.6.0",
     "react-redux": "^7.1.3",
     "realm": "^3.6.3",
