--- a/app/package.json
+++ b/app/package.json
@@ -22,7 +22,7 @@
     "@types/mapbox-gl": "^1.7.0",
     "@types/radium": "^0.24.2",
     "@types/react-native-vector-icons": "^6.4.5",
-    "@types/react-redux": "^7.1.7",
+    "@types/react-redux": "^7.1.9",
     "@types/uuid": "^3.4.7",
     "@types/victory": "^33.1.4",
     "d3": "^5.15.0",
@@ -49,15 +49,15 @@
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
-    "util": "^0.12.0",
-    "uuid": "^3.4.0",
-    "victory-native": "^34.0.0"
+    "util": "^0.12.3",
+    "uuid": "3.4.0",
+    "victory-native": "^34.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/runtime": "^7.8.4",
+    "@babel/core": "^7.10.2",
+    "@babel/runtime": "^7.10.2",
     "@react-native-community/eslint-config": "^0.0.7",
-    "@types/jest": "^25.1.2",
+    "@types/jest": "^25.2.3",
     "@types/react": "^16.9.19",
     "@types/react-native": "^0.61.10",
     "@types/react-test-renderer": "^16.9.2",
@@ -67,7 +67,7 @@
     "react-native-typescript-transformer": "^1.2.13",
     "react-test-renderer": "^16.12.0",
     "ts-jest": "^25.2.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.9.5"
   },
   "jest": {
     "preset": "react-native",
