--- a/app/package.json
+++ b/app/package.json
@@ -38,10 +38,10 @@
     "react-native-device-info": "^5.5.1",
     "react-native-dotenv": "^0.2.0",
     "react-native-haptic": "^1.0.1",
-    "react-native-restart": "^0.0.13",
+    "react-native-restart": "0.0.13",
     "react-native-safe-area-view-with-get-inset": "^0.10.0",
     "react-native-status-bar-height": "^2.4.0",
-    "react-native-svg": "11.0.1",
+    "react-native-svg": "12.1.0",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "6.6.0",
     "react-redux": "^7.1.3",
@@ -51,7 +51,7 @@
     "reselect": "^4.0.0",
     "util": "^0.12.3",
     "uuid": "3.4.0",
-    "victory-native": "^34.3.0"
+    "victory-native": "^35.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
@@ -67,7 +67,7 @@
     "react-native-typescript-transformer": "^1.2.13",
     "react-test-renderer": "^16.12.0",
     "ts-jest": "^25.2.0",
-    "typescript": "^3.9.5"
+    "typescript": "^4.0.2"
   },
   "jest": {
     "preset": "react-native",
