--- a/app/package.json
+++ b/app/package.json
@@ -33,8 +33,8 @@
     "react-devtools": "^4.1.2",
     "react-dom": "^16.9.0",
     "react-native": "0.61.5",
-    "react-native-background-fetch": "^3.0.4",
-    "react-native-background-geolocation": "^3.4.2",
+    "react-native-background-fetch": "3.1.0",
+    "react-native-background-geolocation": "^3.9.0",
     "react-native-device-info": "^5.5.1",
     "react-native-dotenv": "^0.2.0",
     "react-native-haptic": "^1.0.1",
