--- a/app/ios/Podfile
+++ b/app/ios/Podfile
@@ -7,6 +7,8 @@ platform :ios, '12.0'
 target 'Pathify' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   # use_frameworks!
+  # use_frameworks! :linkage => :static
+  # use_modular_headers!
 
   # target 'PathifyTests' do
   #   inherit! :search_paths
