--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.14.0",
     "@react-native-community/cli": "^4.12.0",
     "@react-native-community/slider": "^3.0.3",
-    "@react-native-mapbox-gl/maps": "7.0.9",
+    "@react-native-mapbox-gl/maps": "8.1.0-rc.2",
     "@turf/distance": "^6.0.1",
     "@turf/helpers": "^6.1.4",
     "@turf/turf": "^5.1.6",
@@ -26,7 +26,7 @@
     "@types/uuid": "3.4.9",
     "@types/victory": "^33.1.4",
     "d3": "^5.15.0",
-    "eslint": "^6.8.0",
+    "eslint": "^7.7.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
@@ -45,7 +45,7 @@
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "6.6.0",
     "react-redux": "^7.1.3",
-    "realm": "^6.0.4",
+    "realm": "^6.0.5",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
@@ -55,18 +55,18 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
-    "@babel/runtime": "^7.8.4",
+    "@babel/runtime": "^7.11.2",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.10",
     "@types/react": "^16.9.19",
-    "@types/react-native": "^0.63.8",
+    "@types/react-native": "^0.63.9",
     "@types/react-test-renderer": "^16.9.2",
-    "babel-jest": "25.1.0",
-    "jest": "25.1.0",
+    "babel-jest": "26.3.0",
+    "jest": "26.4.2",
     "metro-react-native-babel-preset": "0.63.0",
     "react-native-typescript-transformer": "^1.2.13",
     "react-test-renderer": "^16.13.1",
-    "ts-jest": "^25.2.0",
+    "ts-jest": "26.2.0",
     "typescript": "^4.0.2"
   },
   "jest": {
