--- a/app/package.json
+++ b/app/package.json
@@ -37,6 +37,7 @@
     "react-native-background-geolocation": "^3.9.0",
     "react-native-device-info": "^5.5.1",
     "react-native-dotenv": "^0.2.0",
+    "react-native-get-random-values": "^1.4.0",
     "react-native-haptic": "^1.0.1",
     "react-native-restart": "0.0.13",
     "react-native-safe-area-view-with-get-inset": "^0.10.0",
