--- a/app/package.json
+++ b/app/package.json
@@ -25,7 +25,7 @@
     "@types/react-redux": "^7.1.9",
     "@types/uuid": "8.3.0",
     "@types/victory": "^33.1.4",
-    "d3": "^5.15.0",
+    "d3": "^6.1.1",
     "eslint": "^7.8.1",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
@@ -36,7 +36,7 @@
     "react-native-background-fetch": "3.1.0",
     "react-native-background-geolocation": "^3.9.0",
     "react-native-device-info": "^6.0.2",
-    "react-native-dotenv": "^0.2.0",
+    "react-native-dotenv": "0.2.0",
     "react-native-get-random-values": "^1.5.0",
     "react-native-haptic": "^1.0.1",
     "react-native-restart": "0.0.13",
@@ -44,7 +44,7 @@
     "react-native-status-bar-height": "^2.4.0",
     "react-native-svg": "12.1.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-vector-icons": "6.6.0",
+    "react-native-vector-icons": "7.0.0",
     "react-redux": "^7.1.3",
     "realm": "^6.1.0",
     "redux": "^4.0.5",
