--- a/server/package.json
+++ b/server/package.json
@@ -66,6 +66,7 @@
     "url-loader": "^4.1.0",
     "util": "^0.12.3",
     "uuid": "^8.3.0",
+    "vhost": "^3.0.2",
     "winston": "^3.3.3",
     "xml2js": "^0.4.23"
   },
