--- a/server/package.json
+++ b/server/package.json
@@ -28,16 +28,16 @@
     "@types/chai": "^4.2.12",
     "@types/chai-as-promised": "^7.1.3",
     "@types/config": "^0.0.36",
-    "@types/express": "^4.17.1",
+    "@types/express": "4.17.1",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/microtime": "^2.1.0",
     "@types/minimist": "^1.2.0",
     "@types/mocha": "^8.0.3",
-    "@types/mongodb": "^3.5.26",
-    "@types/node": "^14.6.0",
+    "@types/mongodb": "^3.5.27",
+    "@types/node": "^14.6.4",
     "@types/node-fetch": "^2.5.7",
     "@types/xml2js": "^0.4.5",
-    "aws-sdk": "^2.740.0",
+    "aws-sdk": "^2.746.0",
     "body-parser": "^1.19.0",
     "bunyan": "^1.8.14",
     "bunyan-middleware": "^1.0.0",
@@ -48,14 +48,14 @@
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "file-loader": "^6.0.0",
+    "file-loader": "^6.1.0",
     "geolib": "^3.3.1",
     "graphql": "^15.3.0",
     "helmet": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "microtime": "^3.0.0",
     "minimist": "^1.2.5",
-    "mocha": "^8.1.1",
+    "mocha": "^8.1.3",
     "module-alias": "^2.2.2",
     "node-fetch": "^2.6.0",
     "nodemon": "^2.0.4",
@@ -66,6 +66,7 @@
     "url-loader": "^4.1.0",
     "util": "^0.12.3",
     "uuid": "^8.3.0",
+    "vhost": "^3.0.2",
     "winston": "^3.3.3",
     "xml2js": "^0.4.23"
   },
