--- a/server/package.json
+++ b/server/package.json
@@ -67,6 +67,7 @@
     "util": "^0.12.3",
     "uuid": "^8.3.0",
     "vhost": "^3.0.2",
+    "vhttps": "^0.1.1",
     "winston": "^3.3.3",
     "xml2js": "^0.4.23"
   },
