--- a/app/package.json
+++ b/app/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-regular-svg-icons": "^5.14.0",
-    "@react-native-community/cli": "^4.12.0",
+    "@react-native-community/cli": "^4.13.0",
     "@react-native-community/slider": "^3.0.3",
-    "@react-native-mapbox-gl/maps": "8.1.0-rc.2",
+    "@react-native-mapbox-gl/maps": "8.1.0-rc.4",
     "@turf/distance": "^6.0.1",
     "@turf/helpers": "^6.1.4",
     "@turf/turf": "^5.1.6",
@@ -44,9 +44,9 @@
     "react-native-status-bar-height": "^2.4.0",
     "react-native-svg": "12.1.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-vector-icons": "7.0.0",
+    "react-native-vector-icons": "7.1.0",
     "react-redux": "^7.1.3",
-    "realm": "^6.1.0",
+    "realm": "6.1.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
@@ -60,7 +60,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.13",
     "@types/react": "^16.9.49",
-    "@types/react-native": "^0.63.14",
+    "@types/react-native": "^0.63.18",
     "@types/react-test-renderer": "^16.9.2",
     "babel-jest": "26.3.0",
     "jest": "26.4.2",
