--- a/app/ios/Podfile
+++ b/app/ios/Podfile
@@ -2,7 +2,7 @@ require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
 # Uncomment the next line to define a global platform for your project
-platform :ios, '12.0'
+platform :ios, '13.0'
 
 target 'Pathify' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
@@ -25,26 +25,23 @@ target 'Pathify' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable these next few lines.
-  use_flipper!
+  # use_flipper!
   post_install do |installer|
-    flipper_post_install(installer)
-  end
-
-  # post_install do |installer|
-  #   installer.generated_projects.each do |project|
-  #     project.build_configurations.each do |config|
-  #         if config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'].to_f < 12.0
-  #           config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
-  #         end
-  #     end
-  #     project.targets.each do |target|
-  #       target.build_configurations.each do |config|
-  #         if config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'].to_f < 12.0
-  #           config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
-  #         end
-  #       end
-  #     end
-  #   end
+    # flipper_post_install(installer)
+    installer.generated_projects.each do |project|
+      project.build_configurations.each do |config|
+          if config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'].to_f < 13.0
+            config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
+          end
+      end
+      project.targets.each do |target|
+        target.build_configurations.each do |config|
+          if config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'].to_f < 13.0
+            config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
+          end
+        end
+      end
+    end
   #   installer.pods_project.targets.each do |target|
   #     # workaround per https://github.com/facebook/react-native/issues/24192
   #     if target.name == "React"
@@ -63,5 +60,5 @@ target 'Pathify' do
   #       target.remove_from_project
   #     end
   #   end
-  # end
+  end
 end
