--- a/app/ios/Podfile
+++ b/app/ios/Podfile
@@ -5,6 +5,13 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 platform :ios, '13.0'
 
 target 'Pathify' do
+  # ignore all warnings from all pods
+  inhibit_all_warnings!
+
+  # from https://stackoverflow.com/questions/13208202/ignore-xcode-warnings-when-using-cocoapods/13209057#13209057
+  # how to ignore warnings from a specific pod
+  # pod 'FBSDKCoreKit', :inhibit_warnings => true
+
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   # use_frameworks!
   # use_frameworks! :linkage => :static
