--- a/app/ios/Pathify/Info.plist
+++ b/app/ios/Pathify/Info.plist
@@ -44,9 +44,9 @@
 		</dict>
 	</dict>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Change to Always Allow to enable your private activity tracking sessions to continue running in the background.</string>
+	<string>Always Allow enables you to privately track your own activities in the background.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Allow While Using App to see your location on a map, and track it on request, privately.</string>
+	<string>Allow While Using App to see your location on a map and privately track your own activities.</string>
 	<key>NSMotionUsageDescription</key>
 	<string>This is needed to maximize battery efficiency, and to determine the mode of travel during tracking.</string>
 	<key>UIAppFonts</key>
